# LoggingAD

./: CMakeLists.txt  LICENSE.txt  README.md
examples/: CMakeLists.txt
examples/FormattedLogMessages/: CMakeLists.txt  main.cpp
examples/SimpleLogMessages/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt  LoggingAD.h  ScopedTimer.h
include/LoggingAD/: ScopedTimer.h
source/: CMakeLists.txt  LogLevel.h  Logging.cpp  Logging.h  LoggingConfig.h  ScopedTimer.cpp
